# CAIV

./: .env  .gitignore  .windsurfrules  ALL_FEATURES_COMPLETE.md  ARCHITECTURE.md  COMPREHENSIVE_COMPLETION.md  FEATURE_EXPANSION_COMPLETE.md  FINAL_COMPLETION.md  FRONTEND_VALIDATION_RULES.md  MIGRATION_COMPLETE.md  MISSING_FEATURES_ADDED.md  README.md  RECENT_UPDATES.md  RESUME_IMPORT_COMPLETE.md  RESUME_IMPORT_QUICK_START.md  architecture.md  claude.md  database_improvements.sql  docker-compose.yml  fix_imports.py  hello.py  migrate_to_features.py  opencode.json  pyproject.toml  test.db
.cph/: .C_Stamina_and_Tasks.cpp_602fbe5e1a46c49ef6f15b04ba76fcab.prob  .C_String_Equality.cpp_2ec4e43da85f52cccaa1fcf524aca657.prob
.github/instructions/: TDD.instructions.md
app/: check_database_tables.py  check_tables.py  check_vector_embeddings.py  main.py  test_models_simple.py  test_new_entity_structure.py  update_entity_models.py
app/alembic/: env.py
app/core/: dependencies.py  exceptions.py  logging.py  rbac.py
app/db/: database.py  session.py
app/features/: __init__.py
app/features/auth/: __init__.py  dependencies.py  (+4 more)
app/tests/: conftest.py
backend/app/: test.db
docs/: API_HIERARCHY_REFACTOR.md  ENTITY_SYSTEM.md  REFACTORING_COMPLETE.md  SCHEMA_CHANGELOG.md  SCHEMA_VALIDATION_ENHANCEMENTS.md  TYPE_ORGANIZATION_REFACTOR.md  api-documentation.md  database-improvements-plan.md  database-schema.md  development-guide.md  global-entity-id-approach.md  vector-embeddings-fix.md
frontend/: nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/app/: app.vue
(+320 files in other folders)
