[project]
name = "caiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "docling>=1.0.0",
    "fastapi[standard]>=0.116.1",
    "groq>=0.9.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.42",
    "torch>=2.3.1",
    "torchaudio>=2.3.1",
    "torchvision>=0.18.1",
]


requires-python = ">=3.12,<3.13" # Keeps us on Python 3.12

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.1"
# REMOVE 'explicit = true' if it's there, or leave it and use the flag above

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
torchvision = { index = "pytorch-rocm" }
torchaudio = { index = "pytorch-rocm" }
pytorch-triton-rocm = { index = "pytorch-rocm" }